objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Requested_Amusement_Equipment__c</fullName>
        <label>Requested Amusement Equipment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Amusement_Equipment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Sharer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Sharer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Revenue Sharer)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signatory_Rights__c</fullName>
        <label>Signatory Rights?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Agreement_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standalone ATM Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Data_Fee__c</fullName>
        <label>Standalone ATM Data Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Live_Date__c</fullName>
        <label>Standalone ATM Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Location_Commission__c</fullName>
        <label>Standalone ATM Location Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Operator_Commission__c</fullName>
        <label>Standalone ATM Operator Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Pictures_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standalone ATM Pictures Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Status__c</fullName>
        <label>Standalone ATM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Pending Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standalone_ATM_Surcharge__c</fullName>
        <label>Standalone ATM Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standalone_ATM_TID__c</fullName>
        <label>Standalone ATM TID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Percentage__c</fullName>
        <label>Subsidiary Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TUA_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TUA Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>TUA</value>
            </filterItems>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Agreements (TUA Lookup)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TUA_Notes__c</fullName>
        <label>Agreement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TUA_Type__c</fullName>
        <label>TUA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledgement of Addendum</fullName>
                </value>
                <value>
                    <fullName>Covid Extension</fullName>
                </value>
                <value>
                    <fullName>Extension Addendum</fullName>
                </value>
                <value>
                    <fullName>Extension Notice</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                    <label>Extension TUA</label>
                </value>
                <value>
                    <fullName>Master TUA</fullName>
                </value>
                <value>
                    <fullName>TUA</fullName>
                </value>
                <value>
                    <fullName>Extension Master TUA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TUA_Version__c</fullName>
        <label>Agreement Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01292021</fullName>
                </value>
                <value>
                    <fullName>01292021 (QUICKPAY)</fullName>
                </value>
                <value>
                    <fullName>01302023 (GA ATM)</fullName>
                </value>
                <value>
                    <fullName>01302023 (GA ClassA)</fullName>
                </value>
                <value>
                    <fullName>01302023 (IA AMUSEMENT)</fullName>
                </value>
                <value>
                    <fullName>01302023 (IA ATM)</fullName>
                </value>
                <value>
                    <fullName>01302023 (NC ATM)</fullName>
                </value>
                <value>
                    <fullName>01302023 (NE AMUSEMENT)</fullName>
                </value>
                <value>
                    <fullName>01302023 (NE ATM)</fullName>
                </value>
                <value>
                    <fullName>01302023 (NE M3T)</fullName>
                </value>
                <value>
                    <fullName>01312023 (WY AMUSEMENT)</fullName>
                </value>
                <value>
                    <fullName>01312023 (WY M3T)</fullName>
                </value>
                <value>
                    <fullName>01312023 (WY RET)</fullName>
                </value>
                <value>
                    <fullName>06092022 (10YRNC)</fullName>
                </value>
                <value>
                    <fullName>﻿06242020 (STD)</fullName>
                </value>
                <value>
                    <fullName>06242020 (STD-CELL)</fullName>
                </value>
                <value>
                    <fullName>08242022 (GA ClassA)</fullName>
                </value>
                <value>
                    <fullName>08242022 (GA ClassB)</fullName>
                </value>
                <value>
                    <fullName>08242022 (IA ATM)</fullName>
                </value>
                <value>
                    <fullName>08242022 (IL AMUSEMENT)</fullName>
                </value>
                <value>
                    <fullName>08242022 (IL ATM)</fullName>
                </value>
                <value>
                    <fullName>08242022 (IL QUICKPAY)</fullName>
                </value>
                <value>
                    <fullName>08242022 (IL TUA)</fullName>
                </value>
                <value>
                    <fullName>08242022 (MO LOI)</fullName>
                </value>
                <value>
                    <fullName>08242022 (NC ATM)</fullName>
                </value>
                <value>
                    <fullName>08242022 (NC VLT)</fullName>
                </value>
                <value>
                    <fullName>08242022 (NE ATM)</fullName>
                </value>
                <value>
                    <fullName>08242022 (PA LOI)</fullName>
                </value>
                <value>
                    <fullName>082712 (STD)</fullName>
                </value>
                <value>
                    <fullName>09132022 (GA ClassB) (w/GC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TUA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent TUA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>TUA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology_Release_Form_Received_Date__c</fullName>
        <label>Technology Release Form Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology_Release_Form_Received__c</fullName>
        <label>Technology Release Form Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Notice_1_Sent__c</fullName>
        <label>Termination Notice (1) Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Notice_2_Due_Date__c</fullName>
        <label>Termination Notice (2) Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Notice_2_Sent__c</fullName>
        <label>Termination Notice (2) Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Notice_Due_Date__c</fullName>
        <label>Termination Notice (1) Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Agreement_Time__c</fullName>
        <formula>Agreement_End_Date__c - StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Agreement Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Left_on_Agreement__c</fullName>
        <formula>TODAY()-StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Left on Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accel_vgt_live_date_formula__c</fullName>
        <formula>Account.Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel VGT Live Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Addendum_Term_Changes</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Addendum_Type__c</field>
            <operation>equals</operation>
            <value>Terms</value>
        </filters>
        <label>Addendum Type: Terms</label>
    </listViews>
    <listViews>
        <fullName>Agreements_expiring_next_3_months</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_MONTHS:3</value>
        </filters>
        <label>Agreements expiring next 3 months</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Physical_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Agreements</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Competitor_TUA_Expiration_Notices</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Termination_Notice_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Competitor_TUA</value>
        </filters>
        <filters>
            <field>Termination_Notice_Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Competitor TUA Expiration Notices</label>
    </listViews>
    <listViews>
        <fullName>Competitor_TUA_pending_Legal_Review</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.SHIPPING_STATE</columns>
        <columns>TUA_Notes__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Agreement_End_Date__c</columns>
        <columns>Termination_Notice_Due_Date__c</columns>
        <columns>Termination_Notice_2_Due_Date__c</columns>
        <columns>Original_Live_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Competitor_TUA</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Pending Changes</value>
        </filters>
        <filters>
            <field>CONTRACT.BILLING_STATE</field>
            <operation>notEqual</operation>
            <value>GA</value>
        </filters>
        <label>Competitor TUA - (pending) Legal Review</label>
        <sharedTo>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft_Agreements</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Draft,In Approval</value>
        </filters>
        <label>Agreements to Approve</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>ATM</fullName>
        <active>false</active>
        <label>ATM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accel_Termination_Amendment</fullName>
        <active>true</active>
        <label>Accel Termination Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Addendum</fullName>
        <active>true</active>
        <label>Addendum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Amusement_Agreement</fullName>
        <active>true</active>
        <label>Amusement Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor_TUA</fullName>
        <active>true</active>
        <label>Competitor TO TUA</label>
    </recordTypes>
    <recordTypes>
        <fullName>DraftKings_Agreement</fullName>
        <active>true</active>
        <label>DraftKings Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension</fullName>
        <active>false</active>
        <label>Extension Notice</label>
    </recordTypes>
    <recordTypes>
        <fullName>GA_COAM_Class_B</fullName>
        <active>true</active>
        <label>GA COAM Class B</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gaming_Agreement</fullName>
        <active>true</active>
        <label>Gaming Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kiosk_Agreement</fullName>
        <active>true</active>
        <label>Kiosk Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Letter_of_Intent</fullName>
        <active>true</active>
        <label>Letter of Intent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Termination_Letter</fullName>
        <active>true</active>
        <label>Location Termination Letter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_TUA</fullName>
        <active>false</active>
        <label>Master TUA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standalone_ATM_Agreement</fullName>
        <active>true</active>
        <label>Standalone ATM Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>TUA</fullName>
        <active>true</active>
        <label>TUA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technology_Release</fullName>
        <active>true</active>
        <label>Technology Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Termination_Notice</fullName>
        <active>true</active>
        <label>Competitor Termination Notice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Universal_Fee_Allocation</fullName>
        <active>true</active>
        <label>Universal Fee Allocation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement_Expiration_Date</fullName>
        <active>true</active>
        <description>Limit editing rights to Agreement Expiration Date (Agreement_End_Date__c) for Amusements, Kiosks, and Standalone ATM record types</description>
        <errorConditionFormula>AND(
ISCHANGED(Agreement_End_Date__c),
or(
RecordType.DeveloperName = &quot;Amusement_Agreement&quot;,
RecordType.DeveloperName = &quot;Standalone_ATM_Agreement&quot;,
RecordType.DeveloperName = &quot;Kiosk_Agreement&quot;)
,

NOT(OR(
$Profile.Name=&quot;System Administrator&quot;,
 $Permission.Agreements_Expiration_Start_Termination_Date 
)))</errorConditionFormula>
        <errorDisplayField>Agreement_End_Date__c</errorDisplayField>
        <errorMessage>You don&apos;t have the editing privileges to modify this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Start_Date</fullName>
        <active>true</active>
        <description>Limit editing rights to Agreement Start Date for Amusements, Kiosks, and Standalone ATM record types</description>
        <errorConditionFormula>AND(
ISCHANGED(StartDate),
or(
RecordType.DeveloperName = &quot;Amusement_Agreement&quot;,
RecordType.DeveloperName = &quot;Standalone_ATM_Agreement&quot;,
RecordType.DeveloperName = &quot;Kiosk_Agreement&quot;)
,

NOT(OR(
$Profile.Name=&quot;System Administrator&quot;,
 $Permission.Agreements_Expiration_Start_Termination_Date 
)))</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>You don&apos;t have the editing privileges to modify this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Termination_Date</fullName>
        <active>true</active>
        <description>Limit editing rights to Agreement Termination Date (Agreement_Termination_Date__c) for Amusements, Kiosks, and Standalone ATM record types</description>
        <errorConditionFormula>AND(
ISCHANGED(Agreement_Termination_Date__c),
or(
RecordType.DeveloperName = &quot;Amusement_Agreement&quot;,
RecordType.DeveloperName = &quot;Standalone_ATM_Agreement&quot;,
RecordType.DeveloperName = &quot;Kiosk_Agreement&quot;)
,

NOT(OR(
$Profile.Name=&quot;System Administrator&quot;,
 $Permission.Agreements_Expiration_Start_Termination_Date 
)))</errorConditionFormula>
        <errorDisplayField>Agreement_Termination_Date__c</errorDisplayField>
        <errorMessage>You don&apos;t have the editing privileges to modify this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_Voided_Reason_is_Required</fullName>
        <active>true</active>
        <description>When status = Void, Agreement Voided Reason is required</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Status , &quot;Void&quot;)  ,
isblank(text(  Agreement_Voided_Reason__c  ) ))</errorConditionFormula>
        <errorDisplayField>Agreement_Voided_Reason__c</errorDisplayField>
        <errorMessage>A Voided Reason must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length_of_Agreement_must_be_a_Number</fullName>
        <active>true</active>
        <description>Length of Agreement is a text field. we need to enforce numerical value for years. This only applies to Kiosks, Standalone ATM agreements, and Amusement agreements</description>
        <errorConditionFormula>and(

or(
RecordType.DeveloperName = &quot;Amusement_Agreement&quot;,
RecordType.DeveloperName = &quot;Standalone_ATM_Agreement&quot;,
RecordType.DeveloperName = &quot;Kiosk_Agreement&quot;),
not( ISBLANK(Length_of_Agreement__c)) ,

not(isnumber( Length_of_Agreement__c )))</errorConditionFormula>
        <errorDisplayField>Length_of_Agreement__c</errorDisplayField>
        <errorMessage>Length of Agreement must be the number of years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notes_for_Other_Equipments</fullName>
        <active>true</active>
        <description>For Requested Amusement Equipment = &quot;Other&quot;, Notes are required.</description>
        <errorConditionFormula>AND(
 INCLUDES(Requested_Amusement_Equipment__c , &quot;Other&quot;) ,
 ISBLANK( Notes__c ) 
)</errorConditionFormula>
        <errorDisplayField>Notes__c</errorDisplayField>
        <errorMessage>Please, specify what type of equipment you are requesting in the Notes field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Person_Procuring_Agreement_Field</fullName>
        <active>true</active>
        <description>Person Procuring Agreement Field must be filled out on new Agreements</description>
        <errorConditionFormula>AND(
ISNEW() =TRUE,
ISBLANK(Person_Procuring_TUA2__c),
OR(
RecordType.Name = &apos;Letter of Intent&apos;,
RecordType.Name = &apos;Location Termination Letter&apos;,
RecordType.Name = &apos;Standalone ATM Agreement&apos;,
RecordType.Name = &apos;Addendum&apos;,
RecordType.Name = &apos;Amusement Agreement&apos;,
RecordType.Name = &apos;GA COAM Class B&apos;,
RecordType.Name = &apos;Kiosk Agreement&apos;,
RecordType.Name = &apos;Gaming Agreement&apos;))</errorConditionFormula>
        <errorMessage>The &apos;Person Procuring Agreement&apos; must be filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TUA_Version_Must_Be_Filled_Out</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId =&quot;0121I000000W9l1&quot;, OR(ISPICKVAL(TUA_Type__c,&quot;TUA&quot;),ISPICKVAL(TUA_Type__c,&quot;Extension&quot;)),ISBLANK(TEXT (TUA_Version__c )))</errorConditionFormula>
        <errorDisplayField>TUA_Version__c</errorDisplayField>
        <errorMessage>Please fill out the Agreement Version.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>percentage_fields_sum_must_equal_100</fullName>
        <active>true</active>
        <description>Subsidiary Percentage + Location Percentage = 100%</description>
        <errorConditionFormula>and(

or(
Customer_Percentage__c + Subsidiary_Percentage__c &lt;&gt;1,
isblank(Customer_Percentage__c),
isblank(Customer_Percentage__c)
),
ISPICKVAL(Account_State__c, &apos;NE&apos;),
 RecordType.DeveloperName = &quot;Gaming_Agreement&quot;
)</errorConditionFormula>
        <errorMessage>The &quot;Customer Percentage&quot; and the &quot;Subsidiary Percentage&quot; fields cannot be blank and they must total 100%, for Nebraska agreements.</errorMessage>
    </validationRules>
</CustomObject>